--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -2,6 +2,9 @@ name: all
 
 on: [push]
 
+permissions:
+  packages: write
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -20,9 +23,7 @@ jobs:
       - run: docker build . --tag ghcr.io/afq984/repo-add-http
         env:
           DOCKER_BUILDKIT: '1'
-      - run: echo $GHCR_PAT | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
-        env:
-            GHCR_PAT: ${{ secrets.GHCR_PAT }}
+      - run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
         if: ${{ github.ref == 'refs/heads/main' }}
       - run: docker push ghcr.io/afq984/repo-add-http:latest
         if: ${{ github.ref == 'refs/heads/main' }}
